# ToonEngine

./: .gitignore  .gitmodules  README.md
ToonEngine/: CMakeLists.txt  ToonEngine.sln
ToonEngine/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters
ToonEngine/Common/Includes/: ToonBufferedAllocator.h  ToonCommonPlugin.h  ToonDoubleEndedStackAllocator.h  ToonNoncopyable.h  ToonSTLAllocator.h  ToonSingleton.h  ToonStackAllocator.h
ToonEngine/Common/Precompiled/: stdafx.h
ToonEngine/DeformableSnow/: DeformableSnow.cpp  DeformableSnow.h  DeformableSnow.vcxproj  dllmain.cpp
ToonEngine/Libraries/include/rttr/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters  cmake_install.cmake  rttr_core.vcxproj.filters
ToonEngine/Libraries/libs/nvidia/: nvToolsExt64_1d.lib
ToonEngine/Resources/: engine_config.ini
ToonEngine/Scripts/: ConfigGen.py  ProjectInclude.py  Utils.py
ToonEngine/TestSolution/: CMakeLists.txt  TestSolution.vcxproj  TestSolution.vcxproj.filters
ToonEngine/TestSolution/Sources/: main.cpp
ToonEngine/ToonEditor/: CMakeLists.txt  ToonEditor.vcxproj  ToonEditor.vcxproj.filters
ToonEngine/ToonEditor/Includes/: LuaEngine.h  ToonEditorRoot.h
ToonEngine/ToonEditor/Includes/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imstb_truetype.h
ToonEngine/ToonEditor/Precompiled/: stdafx.h
ToonEngine/ToonEditor/Sources/: LuaEngine.cpp  ToonEditorRoot.cpp  main.cpp
ToonEngine/ToonEditor/ToonEditor/: ToonEditor.vcxproj  main.cpp
ToonEngine/ToonEditor/imgui/: imgui_demo.cpp  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h
ToonEngine/ToonEngine/: CMakeLists.txt  ToonEngine.vcxproj  ToonEngine.vcxproj.filters
ToonEngine/ToonEngine/Includes/: ToonAlignedAllocator.h  ToonCRC32Hash.h  ToonEngineSystem.h  ToonExceptions.h  ToonFilesystem.h  ToonHeaderPrefix.h  ToonInputSystem.h  ToonLogger.h  ToonNoncopyable.h  ToonObfuscator.h  ToonPlatform.h  ToonPoolAllocator.h  ToonPrerequisites.h  ToonReflection.h  ToonRenderSystem.h  ToonRoot.h  ToonSingleton.h  ToonStackAllocator.h  ToonString.h  ToonSystemMessage.h  ToonSystemMessageBus.h  ToonTimer.h  stdafx.h
ToonEngine/ToonEngine/Precompiled/: stdafx.h
ToonEngine/ToonEngine/Sources/: ToonAlignedAllocator.cpp  ToonFilesystem.cpp  ToonInputSystem.cpp  ToonLogger.cpp  ToonRenderSystem.cpp  ToonRoot.cpp  ToonSystemMessageBus.cpp  ToonTimer.cpp  main.cpp
ToonEngine/ToonEngine/ToonEngine/: ToonBufferedAllocator.h  ToonEngine.vcxproj.filters  ToonEngineSystem.h  ToonFilesystem.h  ToonParser.cpp  ToonRoot.cpp  ToonString.h  ToonSystemMessageBus.h  ToonTimer.cpp  stdafx.cpp
ToonEngine/ToonRendersystem_GL3Plus/: CMakeLists.txt  ToonGL3PlusFramebuffer.h  ToonGL3PlusRenderSystem.cpp  ToonGL3PlusRenderSystem.h  ToonGL3PlusUtil.h  ToonRendersystem_GL3Plus.vcxproj  ToonRendersystem_GL3Plus.vcxproj.filters  dllmain.cpp
ToonEngine/ToonRendersystem_GL3Plus/Includes/: ToonGL3PlusEffect.h  ToonGL3PlusErrorCodes.h  ToonGL3PlusFramebuffer.h  ToonGL3PlusGBuffer.h  ToonGL3PlusInputSystem.h  ToonGL3PlusPlatform.h  ToonGL3PlusPlugin.h  ToonGL3PlusPrerequisites.h  ToonGL3PlusRenderSystem.h  ToonGL3PlusUtil.h  ToonPlugGL3Plus.h  stdafx.h
ToonEngine/ToonRendersystem_GL3Plus/Includes/GUI/: ToonGL3PlusGraphicUserInterface.h
ToonEngine/ToonRendersystem_GL3Plus/Sources/: ToonGL3PlusEffect.cpp  ToonGL3PlusFramebuffer.cpp  ToonGL3PlusGBuffer.cpp  ToonGL3PlusInputSystem.cpp  ToonGL3PlusRenderSystem.cpp  dllmain.cpp
ToonEngine/ToonRendersystem_GL3Plus/imgui/: imconfig.h  imgui_widgets.cpp
ToonEngine/ToonResourceParser/: CMakeLists.txt  ToonResourceParser.vcxproj
ToonEngine/ToonResourceParser/ExampleResource/: engine_config.ini
ToonEngine/ToonResourceParser/Includes/: INIParser.h
ToonEngine/ToonResourceParser/Includes/constexpr/: BasicString.h  StaticString.h  Utility.h  map.h  vector.h
ToonEngine/ToonResourceParser/Sources/: INIParser.cpp  main.cpp
examples/CUDA/: 1-simple-square.cu  1-simple-square.exp  1-simple-square.lib  2-thread-block.cu  2-thread-block.exp  2-thread-block.lib  3-atomic.cu  3-atomic.exp  3-atomic.lib
examples/ComputeShader/opengl-compute-shader/: opengl-compute-shader.sln  opengl-compute-shader.vcxproj
examples/Lua/: 01-start.lua  02-string.lua  03-array.lua  04-iterator.lua  05-tables.lua  06-modules.lua  07-metatables.lua  08-coroutine.lua  09-fileIO.lua  10-error-handling.lua  util.lua
examples/ModernMultithreading/cpp-concurrency-in-action/: cpp-concurrency-in-action.sln  cpp-concurrency-in-action.vcxproj
examples/ModernTemplate/cpp-modern-template-complete-guide/: MoveSemantics.h  Stack.h  cpp-modern-template-complete-guide.sln  cpp-modern-template-complete-guide.vcxproj  cpp-modern-template-complete-guide.vcxproj.filters  main.cpp
src/: CMakeLists.txt  ToonEngine.sln
src/DeformableSnow/: DeformableSnow.h  DeformableSnow.vcxproj  DeformableSnow.vcxproj.filters
src/Editor/Editor/: SA-Editor.vcxproj  SA-Editor.vcxproj.filters  lua_engine.cpp  lua_engine.h
src/Engine/Engine/: AlignedAllocator.cpp  AlignedAllocator.h  Application.cpp  Application.h  Camera.cpp  Camera.h  DoubleBufferedAllocator.h  DoubleEndedStackAllocator.h  Effect.cpp  Effect.h  FileSystem.cpp  FileSystem.h  Framebuffer.cpp  Logger.h  (+44 more)
src/Resources/: engine_config.ini
src/SA-Engine/: SA-Engine.sln
src/TerrainRenderer/: TerrainRenderer.cpp  TerrainRenderer.h  TerrainRenderer.vcxproj  TerrainRenderer.vcxproj.filters  plug_client.h  plug_game.h
src/TestSolution/: TestSolution.vcxproj  TestSolution.vcxproj.filters  main.cpp
src/ToonRendersystem_GL3Plus/: ToonEffect.h  ToonFramebuffer.h  ToonGBuffer.cpp  ToonGL3PlusEffect.cpp  ToonGL3PlusEffect.h  ToonGL3PlusErrorCodes.h  ToonGL3PlusFramebuffer.cpp  ToonGL3PlusFramebuffer.h  ToonGL3PlusGBuffer.cpp  ToonGL3PlusGBuffer.h  ToonGL3PlusRenderSystem.cpp  ToonGL3PlusRenderSystem.h  ToonGL3PlusUtil.h  ToonPlugGL3Plus.h  ToonRenderSystem_GL3Plus.cpp  ToonRendersystem_GL3Plus.vcxproj  ToonRendersystem_GL3Plus.vcxproj.filters
util-tools/postprocess/: string-to-crc32hash.py
util-tools/toon-analyzer/: analyze-Bt+.py
(+216 files in other folders)
